# so.log

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md  package.json  sopa.json  suit.cpp
include/: log.hpp  log_filter.hpp
source/: CMakeLists.txt  Dependencies.cmake  log.cpp  log_data.cpp  log_data.hpp  log_filter.cpp
